Bug 65924 - Regression in drawing the shadow around document in Writer
Summary: Regression in drawing the shadow around document in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-06-19 08:38 UTC by Jan Holesovsky
Modified: 2013-11-13 23:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Only the corner is right. (410 bytes, image/png)
2013-06-19 08:38 UTC, Jan Holesovsky
Details
Once again, hopefully this time it will detect the type as .png :-) (410 bytes, image/png)
2013-06-19 08:43 UTC, Jan Holesovsky
Details
reverting just those restores the border (2.72 KB, patch)
2013-08-23 15:26 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Holesovsky 2013-06-19 08:38:58 UTC
Created attachment 81052 [details]
Only the corner is right.

Caused by 45a8eaf9c55f2686f69118641d8a8992a86dfe31, see the attachment how it looks in master now.
Comment 1 Jan Holesovsky 2013-06-19 08:40:06 UTC
The frame / shadow is being drawn using SwPageFrm::PaintBorderAndShadow() in sw/source/core/layout/paintfrm.cxx.
Comment 2 Jan Holesovsky 2013-06-19 08:43:46 UTC
Created attachment 81053 [details]
Once again, hopefully this time it will detect the type as .png :-)
Comment 3 Caolán McNamara 2013-08-23 14:33:09 UTC
regression in 1c2ab8f7871e5b29f5c0025edfdd2ef9e1f795fa..e08407052f556c981e533f532815125769212685 range apparently
Comment 4 Caolán McNamara 2013-08-23 15:25:11 UTC
Its the changes with http://cgit.freedesktop.org/libreoffice/core/commit/?id=45a8eaf9c55f2686f69118641d8a8992a86dfe31 of the Cropping values in drawinglayer/source/primitive2d/discreteshadowprimitive2d.cxx which triggers this
Comment 5 Caolán McNamara 2013-08-23 15:26:25 UTC
Created attachment 84523 [details]
reverting just those restores the border

purely experimental to demo the problem trigger at this point
Comment 6 Caolán McNamara 2013-08-23 15:33:21 UTC
caolanm->tbehrens: Any thoughts on which direction to go here. Change these cropping numbers or change page-shadow-mask.png (where presumably shifting things around a few pixels for the new numbers would do the right thing). In the absence of a clear direction I'll look into tweaking the png :-)
Comment 7 Commit Notification 2013-08-28 14:30:37 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=741c430f6c7e289543f1f73ce6568e1f07a7ea48

Resolves: fdo#65924 retweak the border positions



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2013-08-28 14:34:38 UTC
good enough I hope