Resolves: fdo#65924 retweak the border positions

required due to 45a8eaf9c55f2686f69118641d8a8992a86dfe31

Change-Id: Ibffc9b4a5eaa8ad538ce53f0389519721fdbcf20